parser/src/snapshots/rustpython_parser__parser__tests__parse_if_else_generator_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Attributed {
    range: 0..26,
    custom: (),
    node: GeneratorExp(
        ExprGeneratorExp {
            elt: Attributed {
                range: 1..14,
                custom: (),
                node: IfExp(
                    ExprIfExp {
                        test: Attributed {
                            range: 6..7,
                            custom: (),
                            node: Name(
                                ExprName {
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                        },
                        body: Attributed {
                            range: 1..2,
                            custom: (),
                            node: Name(
                                ExprName {
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                        },
                        orelse: Attributed {
                            range: 13..14,
                            custom: (),
                            node: Name(
                                ExprName {
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                        },
                    },
                ),
            },
            generators: [
                Comprehension {
                    target: Attributed {
                        range: 19..20,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: "y",
                                ctx: Store,
                            },
                        ),
                    },
                    iter: Attributed {
                        range: 24..25,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: "z",
                                ctx: Load,
                            },
                        ),
                    },
                    ifs: [],
                    is_async: 0,
                },
            ],
        },
    ),
}
