parser/src/snapshots/rustpython_parser__parser__tests__parse_kwargs.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..32,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..32,
                    custom: (),
                    node: Call(
                        ExprCall {
                            func: Located {
                                range: 0..7,
                                custom: (),
                                node: Name(
                                    ExprName {
                                        id: "my_func",
                                        ctx: Load,
                                    },
                                ),
                            },
                            args: [
                                Located {
                                    range: 8..20,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "positional",
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            keywords: [
                                Located {
                                    range: 22..31,
                                    custom: (),
                                    node: KeywordData {
                                        arg: Some(
                                            "keyword",
                                        ),
                                        value: Located {
                                            range: 30..31,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Int(
                                                        2,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                    },
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
