parser/src/snapshots/rustpython_parser__parser__tests__parse_lambda.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..18,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..18,
                    custom: (),
                    node: Lambda(
                        ExprLambda {
                            args: Arguments {
                                posonlyargs: [],
                                args: [
                                    Located {
                                        range: 7..8,
                                        custom: (),
                                        node: ArgData {
                                            arg: "x",
                                            annotation: None,
                                            type_comment: None,
                                        },
                                    },
                                    Located {
                                        range: 10..11,
                                        custom: (),
                                        node: ArgData {
                                            arg: "y",
                                            annotation: None,
                                            type_comment: None,
                                        },
                                    },
                                ],
                                vararg: None,
                                kwonlyargs: [],
                                kw_defaults: [],
                                kwarg: None,
                                defaults: [],
                            },
                            body: Located {
                                range: 13..18,
                                custom: (),
                                node: BinOp(
                                    ExprBinOp {
                                        left: Located {
                                            range: 13..14,
                                            custom: (),
                                            node: Name(
                                                ExprName {
                                                    id: "x",
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                        op: Mult,
                                        right: Located {
                                            range: 17..18,
                                            custom: (),
                                            node: Name(
                                                ExprName {
                                                    id: "y",
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            },
        ),
    },
]
