parser/src/snapshots/rustpython_parser__parser__tests__parse_lambda_no_args.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..9,
            value: Lambda(
                ExprLambda {
                    range: 0..9,
                    args: Arguments {
                        range: 6..6,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    body: Constant(
                        ExprConstant {
                            range: 8..9,
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    ),
                },
            ),
        },
    ),
]
