parser/src/snapshots/rustpython_parser__parser__tests__parse_list_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 0,
    },
    end_location: Some(
        Location {
            row: 1,
            column: 14,
        },
    ),
    custom: (),
    node: ListComp(
        ExprListComp {
            elt: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 2,
                    },
                ),
                custom: (),
                node: Name(
                    ExprName {
                        id: "x",
                        ctx: Load,
                    },
                ),
            },
            generators: [
                Comprehension {
                    target: Located {
                        location: Location {
                            row: 1,
                            column: 7,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 8,
                            },
                        ),
                        custom: (),
                        node: Name(
                            ExprName {
                                id: "y",
                                ctx: Store,
                            },
                        ),
                    },
                    iter: Located {
                        location: Location {
                            row: 1,
                            column: 12,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 13,
                            },
                        ),
                        custom: (),
                        node: Name(
                            ExprName {
                                id: "z",
                                ctx: Load,
                            },
                        ),
                    },
                    ifs: [],
                    is_async: 0,
                },
            ],
        },
    ),
}
