parser/src/snapshots/rustpython_parser__parser__tests__parse_named_expression_generator_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Attributed {
    range: 0..23,
    custom: (),
    node: GeneratorExp(
        ExprGeneratorExp {
            elt: Attributed {
                range: 1..11,
                custom: (),
                node: NamedExpr(
                    ExprNamedExpr {
                        target: Attributed {
                            range: 1..2,
                            custom: (),
                            node: Name(
                                ExprName {
                                    id: Identifier(
                                        "x",
                                    ),
                                    ctx: Store,
                                },
                            ),
                        },
                        value: Attributed {
                            range: 6..11,
                            custom: (),
                            node: BinOp(
                                ExprBinOp {
                                    left: Attributed {
                                        range: 6..7,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "y",
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                    op: Add,
                                    right: Attributed {
                                        range: 10..11,
                                        custom: (),
                                        node: Constant(
                                            ExprConstant {
                                                value: Int(
                                                    1,
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
            generators: [
                Comprehension {
                    target: Attributed {
                        range: 16..17,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "y",
                                ),
                                ctx: Store,
                            },
                        ),
                    },
                    iter: Attributed {
                        range: 21..22,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "z",
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                    ifs: [],
                    is_async: false,
                },
            ],
        },
    ),
}
