parser/src/snapshots/rustpython_parser__parser__tests__parse_print_hello.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..20,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..20,
                    custom: (),
                    node: Call(
                        ExprCall {
                            func: Attributed {
                                range: 0..5,
                                custom: (),
                                node: Name(
                                    ExprName {
                                        id: "print",
                                        ctx: Load,
                                    },
                                ),
                            },
                            args: [
                                Attributed {
                                    range: 6..19,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "Hello world",
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            keywords: [],
                        },
                    ),
                },
            },
        ),
    },
]
