parser/src/snapshots/rustpython_parser__parser__tests__parse_string.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..13,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..13,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "Hello world",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
