parser/src/snapshots/rustpython_parser__parser__tests__parse_tuples.snap
---
source: parser/src/parser.rs
expression: "parse_program(source, \"<test>\").unwrap()"
---
[
    Attributed {
        range: 0..11,
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Attributed {
                        range: 0..4,
                        custom: (),
                        node: Tuple(
                            ExprTuple {
                                elts: [
                                    Attributed {
                                        range: 0..1,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: "a",
                                                ctx: Store,
                                            },
                                        ),
                                    },
                                    Attributed {
                                        range: 3..4,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: "b",
                                                ctx: Store,
                                            },
                                        ),
                                    },
                                ],
                                ctx: Store,
                            },
                        ),
                    },
                ],
                value: Attributed {
                    range: 7..11,
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Attributed {
                                    range: 7..8,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                4,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 10..11,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                5,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                },
                type_comment: None,
            },
        ),
    },
]
