parser/src/snapshots/rustpython_parser__parser__tests__slice.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Attributed {
    range: 0..8,
    custom: (),
    node: Subscript(
        ExprSubscript {
            value: Attributed {
                range: 0..1,
                custom: (),
                node: Name(
                    ExprName {
                        id: "x",
                        ctx: Load,
                    },
                ),
            },
            slice: Attributed {
                range: 2..7,
                custom: (),
                node: Slice(
                    ExprSlice {
                        lower: Some(
                            Attributed {
                                range: 2..3,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            1,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ),
                        upper: Some(
                            Attributed {
                                range: 4..5,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            2,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ),
                        step: Some(
                            Attributed {
                                range: 6..7,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            3,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
            ctx: Load,
        },
    ),
}
